# fastlz-rs

./: .gitmodules  Cargo.toml  README.md  lib.rs
benches/: compare_compression.rs
data/: corpora-list.txt  sample.txt
fastlz-sys/: Cargo.toml  build.rs
fastlz-sys/src/: lib.rs
src/: consts.rs  fastlz.rs  lib.rs  macros.rs  sys.rs  utils.rs
src/native/: compress.rs  decompress.rs  mod.rs
src/tests/: refimpl.rs  test_roundtrip.rs
tests/: refimpl.rs  test_cross_checks.rs  test_roundtrip.rs
tests/data/: compressed-lvl1.lz  compressed-lvl2.lz
tests/refimpl/: mod.rs
