[package]
name = "fastlz-rs"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2021"
autobins = false

[lib]
name = "fastlz_rs"
crate-type = ["cdylib", "rlib"]

[features]
sys = ["fastlz-sys"]

[dependencies]
fastlz-sys = { version = "0.1.0", path = "fastlz-sys", optional = true }

[dev-dependencies]
criterion = "0.3"
fastlz-sys = { version = "0.1.0", path = "fastlz-sys" }

[workspace]
members = ["fastlz-sys"]

[[bench]]
name = "compare_compression"
harness = false
